Twenty Ten: better spacing for rows of in-content page links. Props iandstewart, fixes #16570.
git-svn-id: http://core.svn.wordpress.org/trunk@22216 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyten/style.css
+++ b/wp-content/themes/twentyten/style.css
@@ -651,7 +651,7 @@ div.menu li {
 	clear: both;
 	color: #000;
 	font-weight: bold;
-	margin: 0 0 22px 0;
+	line-height: 48px;
 	word-spacing: 0.5em;
 }
 .page-link a:link,
